# Celeritas

./: .gitignore  CMakeLists.txt  Doxyfile
include/: LRAM_Base_Thread.h  LRAM_Rail_Thread.h  SON.h  SON_ErrorCode.h  SON_Rail_tcp.h  SON_bigbrother.h  SON_celeritasClient.h  SON_celeritasServer.h  SON_common.h  SON_connection_stats.h  SON_defaultparam.h  SON_iovec.h  SON_paralleltcp.h  SON_perf.h  SON_tcp.h  SON_timer.h  SON_udp.h  SON_util_printmessage.h
include/plugin/: LRAM_Net_Client.h  LRAM_Net_Plugin.h  LRAM_Net_SONparalleltcp.h  LRAM_Net_SONparalleltcpClient.h  LRAM_Net_SONparalleltcpServer.h  LRAM_Net_SONtcp.h  LRAM_Net_SONtcpClient.h  LRAM_Net_SONtcpServer.h  LRAM_Net_Server.h
src/: BWClient.cpp  CMakeLists.txt  SON_bigbrother.cpp  SON_celeritasClient.cpp  SON_celeritasServer.cpp  SON_iovec.cpp  SON_paralleltcp.cpp  SON_perf.cpp  SON_tcp.cpp
src/plugin/: LRAM_Net_Plugin.cpp  LRAM_Net_SONparalleltcp.cpp  LRAM_Net_SONparalleltcpClient.cpp  LRAM_Net_SONparalleltcpServer.cpp  LRAM_Net_SONtcp.cpp  LRAM_Net_SONtcpClient.cpp  LRAM_Net_SONtcpServer.cpp  testPluginClient.cpp  testPluginServer.cpp
